2008-09-29  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New analysis: CDF_2000_S4155203

2008-09-23  Andy Buckley  <andy@insectnation.org>

	* rivetgun can now be built and run without AGILe. Based on a
	patch by Frank Siegert.

2008-09-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Some preliminary numbers for the CDF_2008_LEADINGJETS analysis
	(only transverse region and not all observables. But all we have now.)

2008-09-17  Andy Buckley  <andy@insectnation.org>

	* Breaking up the mammoth "generate" function, to make Python
	mapping easier, among other reasons.

	* Added if-zero-return-zero checking to angle mapping functions,
	to avoid problems where 1e-19 gets mapped on to 2 pi and then
	fails boundary asserts.

	* Added HistoHandler singleton class, which will be a central
	repository for holding analyses' histogram objects to be accessed
	via a user-chosen name.

2008-08-26  Andy Buckley  <andy@insectnation.org>

	* Allowing rivet-config to return combined flags.

2008-08-14  Andy Buckley  <andy@insectnation.org>

	* Fixed some g++ 4.3 compilation bugs, including "vector" not
	being a valid name for a method which returns a physics vector,
	since it clashes with std::vector (which we globally import). Took
	the opportunity to rationalise the Jet interface a bit, since
	"particle" was used to mean "FourMomentum", and "Particle" types
	required a call to "getFullParticle". I removed the "gets" at the
	same time, as part of our gradual migration to a coherent naming
	policy.

2008-08-11  Andy Buckley  <andy@insectnation.org>

	* Tidying of FastJets and added new data files from HepData.

2008-08-10  James Monk  <jmonk@hep.ucl.ac.uk>

	* FastJets now uses user_index property of fastjet::PseudoJet to
	reconstruct PID information in jet contents.

2008-08-07  Andy Buckley  <andy@insectnation.org>

	* Reworking of param file and command line parsing. Tab characters
	are now handled by the parser, in a way equivalent to spaces.
